# agentic-coding-tools

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  flags.yaml
agent-coordinator/: .secrets.yaml.example  CLAUDE.md  Dockerfile  Makefile  OPENSPEC.md  README.md  agents.yaml  docker-compose.yml  pyproject.toml  railway.toml  run_mcp.py
agent-coordinator/cedar/: default_policies.cedar  schema.cedarschema
agent-coordinator/database/: seed.sql
agent-coordinator/database/migrations/: 000_bootstrap.sql  001_core_schema.sql  (+20 more)
agent-coordinator/evaluation/: __init__.py  metrics.py
agent-coordinator/scripts/: gemini_wrapper.sh  langfuse_hook.py  print_coordinator_env.py  report_status.py  setup_cloud.py  setup_langfuse.sh  wait_for_db.py
agent-coordinator/src/: agents_config.py  approval.py  audit.py  config.py  coordination_api.py  coordination_cli.py  coordination_mcp.py  discovery.py  event_bus.py  feature_flags.py  guardrails.py  handoffs.py  help_service.py  issue_service.py  langfuse_middleware.py  langfuse_tracing.py  locks.py  merge_train_service.py  merge_train_types.py  migrations.py  policy_engine.py  policy_sync.py  profiles.py  refresh_rpc_client.py  risk_scorer.py  session_grants.py  telemetry.py  watchdog.py  work_queue.py
agent-coordinator/tests/: test_agents_config.py  test_agents_config_isolation.py  test_approval.py  test_archetype_routing.py  test_archetypes_config.py  test_cedar_policy_seed_alignment.py  test_delegated_identity.py  test_feature_flags.py  test_git_adapter.py  test_handoffs.py  test_help_service.py  test_issue_service.py  test_langfuse_hook.py  test_langfuse_middleware.py  test_langfuse_tracing.py  test_lock_metrics.py  test_merge_train.py  test_merge_train_service.py  test_merge_train_types.py  test_otel_integration.py  test_policy_engine.py  test_policy_metrics.py  test_policy_sync.py  test_queue_metrics.py  test_refresh_rpc_client.py  test_risk_scorer.py  test_rls_assertions.py  test_rpc_migration_alignment.py  test_session_grants.py  test_status_reporting.py  test_telemetry.py  test_transport_auth.py  test_watchdog_vendor.py
skills/: .gitignore  fetch-vendor-skills.sh  install.sh  pyproject.toml  vendor-manifest.json
skills/autopilot/: SKILL.md
skills/autopilot-roadmap/: SKILL.md
skills/changelog-version/: SKILL.md
skills/cleanup-feature/: SKILL.md
skills/explore-feature/: SKILL.md
skills/fix-scrub/: SKILL.md
skills/gen-eval/: SKILL.md
skills/implement-feature/: SKILL.md
skills/iterate-on-implementation/: SKILL.md
skills/iterate-on-plan/: SKILL.md
skills/linear-cleanup-feature/: SKILL.md
skills/merge-pull-requests/: SKILL.md
skills/parallel-cleanup-feature/: SKILL.md
skills/parallel-implement-feature/: SKILL.md
skills/parallel-plan-feature/: SKILL.md
skills/parallel-review-implementation/: SKILL.md
skills/parallel-review-plan/: SKILL.md
skills/plan-feature/: SKILL.md
skills/plan-roadmap/: SKILL.md
skills/quick-task/: SKILL.md
skills/refresh-architecture/: SKILL.md
skills/session-bootstrap/: SKILL.md
skills/setup-coordinator/: SKILL.md
skills/shared/: __init__.py  environment_profile.py
skills/validate-feature/: SKILL.md
skills/vendor-status/: SKILL.md
(+775 files in other folders)
