[project]
name = "agent-coordinator"
version = "0.1.0"
description = "Multi-agent coordination system for AI coding assistants"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.3.0",
    "httpx>=0.27.0",
    "hvac>=2.1.0",
    "jsonschema>=4.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
    "aiosmtplib>=2.0.0",
    "aioimaplib>=1.0.0",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]
postgres = [
    "asyncpg>=0.30.0",
]
cedar = [
    "cedarpy>=4.0.0",
]
sdk = [
    "anthropic>=0.94.0",
    "openai>=1.50",
    "google-generativeai>=0.8",
]
gen-eval = [
    "jinja2>=3.1.0",
    "jsonpath-ng>=1.6.0",
]
analysis = [
    "psycopg2-binary>=2.9.0",
]
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-exporter-prometheus>=0.45b0",
    "prometheus-client>=0.20.0",
    "langfuse>=3.0,<4.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-playwright>=0.7.2",
    "respx>=0.21.0",
    "PyJWT>=2.8.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "hypothesis>=6.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-playwright>=0.7.2",
    "respx>=0.21.0",
    "PyJWT>=2.8.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0",
    "asyncpg>=0.30.0",
    "cedarpy>=4.0.0",
]

[project.scripts]
coordination-mcp = "src.coordination_mcp:main"
coordination-api = "src.coordination_api:main"
coordination-cli = "src.coordination_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring local Supabase (docker-compose up -d)",
    "e2e: end-to-end tests against running services (docker-compose up -d)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
